--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "firebase": "^7.6.1",
-    "firebase-functions": "^3.3.0",
+    "firebase-admin": "8.9.2",
+    "firebase-functions": "3.3.0",
     "nodemailer": "^6.4.2",
     "rbx": "^2.2.0",
     "react": "^16.12.0",
